增加人物移动

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <link rel="icon" href="/5.png" />
+  <link rel="icon" href="" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>threejs</title>
   <script type="module"></script>
